# crypto-ai-kraken

./: .gitignore  README.md  pyproject.toml
configs/: config.toml
logs/: paper_trades.csv
scripts/: backtest.py  bulk_import_csvs.py  import_ohlc_csv.py  list_instruments.py  run_paper.py
src/: app.py  app_futures_demo.py
src/agent/: groq_client.py
src/crypto_ai_kraken.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: csv_importer.py  ohlc_rest.py
src/exchange/: kraken_futures_rest.py  kraken_futures_ws.py  kraken_ws.py
src/execution/: bar_builder.py  paper_engine.py
src/strategies/: ema_atr.py
src/utils/: config.py
